--- a/style.css
+++ b/style.css
@@ -1,11 +1,19 @@
 body {
+  background: linear-gradient(to bottom right, #1e1e2f, #2c3e50);
   font-family: 'Cairo', sans-serif;
-  background-color: #f9f9f9;
-  direction: rtl;
-  text-align: center;
   margin: 0;
   padding: 0;
+  direction: rtl;
+  color: #f0f0f0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
+.quiz-container {
+  background-color: #2c3e50;
+  color: #f0f0f0;
+}
+
 
 .container {
   margin-top: 100px;
